[gd_scene load_steps=9 format=3 uid="uid://ctcqr4m8qh8fc"]

[ext_resource type="Theme" uid="uid://liuy3as2gehs" path="res://Fonts/Themes/bigger_dice_game_ui.tres" id="1_kvuu5"]
[ext_resource type="Script" path="res://Scripts/new_game_map/event/rolloff_event.gd" id="1_o3shj"]
[ext_resource type="Theme" uid="uid://g7xlk0plmj00" path="res://Fonts/Themes/dice_game_ui.tres" id="2_vb3ct"]
[ext_resource type="Texture2D" uid="uid://ba5fohkagawd8" path="res://Sprites/dice_game_ui/close X.png" id="3_xb8pf"]
[ext_resource type="Script" path="res://Scripts/dice_game/dice_holder.gd" id="6_wjac0"]
[ext_resource type="Script" path="res://Scripts/shop/shop_container.gd" id="7_sd8yy"]
[ext_resource type="PackedScene" uid="uid://c21j8rpl4tpqr" path="res://Prefabs/game_ui/ui_item_desciption.tscn" id="8_7ph7v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vqjpx"]
size = Vector2(317, 295)

[node name="rolloff_event" type="Node2D"]
script = ExtResource("1_o3shj")

[node name="game Visuals TEMP2" type="ColorRect" parent="."]
offset_left = -3.0
offset_top = -5.0
offset_right = 1158.0
offset_bottom = 647.0
color = Color(1, 0.658824, 0.658824, 1)

[node name="Title" type="RichTextLabel" parent="."]
offset_left = 201.0
offset_top = 10.0
offset_right = 947.0
offset_bottom = 80.0
theme = ExtResource("1_kvuu5")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]ui_event"

[node name="inventory_label" type="RichTextLabel" parent="."]
offset_left = 883.0
offset_top = 269.0
offset_right = 1122.0
offset_bottom = 314.0
theme = ExtResource("2_vb3ct")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "inventory"

[node name="ui_body" type="RichTextLabel" parent="."]
offset_left = 531.0
offset_top = 82.0
offset_right = 1137.0
offset_bottom = 227.0
theme = ExtResource("2_vb3ct")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
bbcode_enabled = true
text = "ui_body"

[node name="player_ui" type="Node2D" parent="."]

[node name="close" type="TextureButton" parent="player_ui"]
visible = false
offset_left = 1093.0
offset_top = 7.0
offset_right = 1315.0
offset_bottom = 234.0
scale = Vector2(0.23, 0.23)
focus_mode = 0
texture_normal = ExtResource("3_xb8pf")

[node name="rolloff_requirements" type="VBoxContainer" parent="."]
offset_left = 50.0
offset_top = 316.0
offset_right = 807.0
offset_bottom = 618.0

[node name="player_inventory" type="Node2D" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="player_inventory"]
offset_left = 813.0
offset_top = 309.0
offset_right = 1139.0
offset_bottom = 606.0

[node name="GridContainer" type="GridContainer" parent="player_inventory/PanelContainer"]
layout_mode = 2
columns = 3
script = ExtResource("7_sd8yy")
trade_side = "discard"

[node name="inventory" type="Area2D" parent="player_inventory" groups=["dice_snap"]]
position = Vector2(953, 331)
script = ExtResource("6_wjac0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_inventory/inventory"]
position = Vector2(21.5, 128.5)
shape = SubResource("RectangleShape2D_vqjpx")

[node name="ui_item_desciption" parent="." instance=ExtResource("8_7ph7v")]
visible = false
offset_left = 750.0
offset_top = 25.0
offset_right = 1262.0
offset_bottom = 481.0
scale = Vector2(0.6, 0.6)

[node name="dice_layer" type="Node2D" parent="."]

[node name="summary_display" type="ColorRect" parent="."]
offset_left = 136.0
offset_top = 73.0
offset_right = 1019.0
offset_bottom = 569.0
color = Color(0.823529, 0.694118, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="summary_display"]
layout_mode = 0
offset_left = 91.0
offset_top = 51.0
offset_right = 791.0
offset_bottom = 444.0

[node name="ui_body" type="Label" parent="summary_display/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vb3ct")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "ui_summary_text"
autowrap_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="summary_display/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_right = 300

[node name="result_button" type="Button" parent="summary_display/VBoxContainer/MarginContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_vb3ct")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "OK"

[connection signal="button_down" from="summary_display/VBoxContainer/MarginContainer/result_button" to="." method="_on_result_button_button_down"]
